<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
  xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
  <modelVersion>4.0.0</modelVersion>

  <groupId>RemoteControl</groupId>
  <artifactId>RemoteControl</artifactId>
  <version>0.1-SNAPSHOT</version>
  <packaging>jar</packaging>

  <name>Text to Voice Mac</name>
  <url>http://hcarrasco.cl/text-to-mac-voice</url>

  <properties>
    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
  </properties>

    <dependencies>
        <dependency>
            <groupId>junit</groupId>
            <artifactId>junit</artifactId>
            <version>3.8.1</version>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>log4j</groupId>
	        <artifactId>log4j</artifactId>
	        <version>1.2.17</version>
        </dependency>
        <dependency>
	        <groupId>io.netty</groupId>
	        <artifactId>netty-all</artifactId>
	        <version>4.0.33.Final</version>
        </dependency>
    </dependencies>
    <organization>
    	<name>hcarrasco</name>
    	<url>hcarrasco.cl</url>
    </organization>
    <build>
    	<plugins>
    		<plugin>
    			<groupId>org.apache.maven.plugins</groupId>
    			<artifactId>maven-compiler-plugin</artifactId>
    			<version>2.3.2</version>
    			<configuration>
					<source>1.8</source>
					<target>1.8</target>
				</configuration>
    		</plugin>
    		<plugin>
    			<groupId>org.apache.maven.plugins</groupId>
		  		<artifactId>maven-shade-plugin</artifactId>
		  		<version>2.3</version>
		  		<executions>
			     	<!-- Run shade goal on package phase -->
			    	<execution>
						<phase>package</phase>
						<goals>
							<goal>shade</goal>
						</goals>
						<configuration>
						  	<transformers>
							<!-- add Main-Class to manifest file -->
			                	<transformer implementation="org.apache.maven.plugins.shade.resource.ManifestResourceTransformer">
									<mainClass>cl.hcarrasco.texttomacvoiceserver.server.Start</mainClass>
								</transformer>
						  	</transformers>
						</configuration>
			      	</execution>
		  		</executions>
			</plugin>
    	</plugins>
    </build>
</project>
